--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^1.0.4
   another_flutter_splash_screen: ^1.2.0
   lottie: ^2.7.0
+  tflite_flutter: ^0.10.3
 
 dev_dependencies:
   flutter_test:
