--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.4
+  camera: ^0.10.5+5
+  image: ^4.1.3
+  path: ^1.8.3
+  path_provider: ^2.1.1
   another_flutter_splash_screen: ^1.2.0
   lottie: ^2.7.0
   tflite_flutter: ^0.10.3
